# readme-ai-genie-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/readme_ai_genie/: __init__.py  __main__.py  ai.py  files.py  styles.py  ui.py
